[gd_scene load_steps=3 format=3 uid="uid://dvehdaexcgk6e"]

[ext_resource type="Texture2D" uid="uid://6t22vo888vip" path="res://assets/bgs/main_menu.png" id="1_yq4sh"]
[ext_resource type="Script" path="res://screens/main_menu/v_box_container.gd" id="2_r2f3l"]

[node name="MainMenu" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_yq4sh")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 34.0
offset_top = 199.0
offset_right = 221.0
offset_bottom = 357.0
script = ExtResource("2_r2f3l")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 0
text = "Continue"

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 0
text = "New Game"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"
